# arachnarium

./: .gitignore  README.md  pyproject.toml  requirements.txt
arachnarium/: __init__.py  __main__.py  app.py  crawler.py  experiment.py  manager.py  runner.py
arachnarium/resources/: docker-compose.base.yml
examples/: batch.yml
examples/apps/simplewebapp/: docker-compose.yml
examples/apps/simplewebapp/web/: Dockerfile  requirements.txt  server.py
examples/crawlers/simplecrawler/: docker-compose.yml
examples/crawlers/simplecrawler/src/: Dockerfile  crawler.py  requirements.txt
